# openenv-email-triage

./: Dockerfile  README.md  app.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_local.py
server/: app.py  baseline.py  environment.py  tasks.py
