[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openenv-email-triage"
version = "0.1.0"
description = "OpenEnv Email Triage Environment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.8.2",
    "openai==1.42.0",
    "openenv[all]==0.1.13",
    "requests==2.32.3"
]

[tool.hatch.build.targets.wheel]
packages = []
